--- a/private.html
+++ b/private.html
@@ -1326,6 +1326,18 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printBonG*(astring: string)"><wbr />print<wbr />Bon<wbr />G</a></li>
   <li><a class="reference" href="#printLnBonG,string"
     title="printLnBonG*(astring: string)"><wbr />print<wbr />Ln<wbr />Bon<wbr />G</a></li>
+  <li><a class="reference" href="#printBbonG,string"
+    title="printBbonG*(astring: string)"><wbr />print<wbr />Bbon<wbr />G</a></li>
+  <li><a class="reference" href="#printLnBbonG,string"
+    title="printLnBbonG*(astring: string)"><wbr />print<wbr />Ln<wbr />Bbon<wbr />G</a></li>
+  <li><a class="reference" href="#printBbonGb,string"
+    title="printBbonGb*(astring: string)"><wbr />print<wbr />Bbon<wbr />Gb</a></li>
+  <li><a class="reference" href="#printLnBbonGb,string"
+    title="printLnBbonGb*(astring: string)"><wbr />print<wbr />Ln<wbr />Bbon<wbr />Gb</a></li>
+  <li><a class="reference" href="#printBonGb,string"
+    title="printBonGb*(astring: string)"><wbr />print<wbr />Bon<wbr />Gb</a></li>
+  <li><a class="reference" href="#printLnBonGb,string"
+    title="printLnBonGb*(astring: string)"><wbr />print<wbr />Ln<wbr />Bon<wbr />Gb</a></li>
   <li><a class="reference" href="#printBonY,string"
     title="printBonY*(astring: string)"><wbr />print<wbr />Bon<wbr />Y</a></li>
   <li><a class="reference" href="#printLnBonY,string"
@@ -1342,10 +1354,22 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printWonB*(astring: string)"><wbr />print<wbr />Won<wbr />B</a></li>
   <li><a class="reference" href="#printLnWonB,string"
     title="printLnWonB*(astring: string)"><wbr />print<wbr />Ln<wbr />Won<wbr />B</a></li>
-  <li><a class="reference" href="#printBlWonW,string"
-    title="printBlWonW*(astring: string)"><wbr />print<wbr />Bl<wbr />Won<wbr />W</a></li>
+  <li><a class="reference" href="#printBlonW,string"
+    title="printBlonW*(astring: string)"><wbr />print<wbr />Blon<wbr />W</a></li>
   <li><a class="reference" href="#printLnBlonW,string"
     title="printLnBlonW*(astring: string)"><wbr />print<wbr />Ln<wbr />Blon<wbr />W</a></li>
+  <li><a class="reference" href="#printConBl,string"
+    title="printConBl*(astring: string)"><wbr />print<wbr />Con<wbr />Bl</a></li>
+  <li><a class="reference" href="#printLnConBl,string"
+    title="printLnConBl*(astring: string)"><wbr />print<wbr />Ln<wbr />Con<wbr />Bl</a></li>
+  <li><a class="reference" href="#printCbonBl,string"
+    title="printCbonBl*(astring: string)"><wbr />print<wbr />Cbon<wbr />Bl</a></li>
+  <li><a class="reference" href="#printLnCbonBl,string"
+    title="printLnCbonBl*(astring: string)"><wbr />print<wbr />Ln<wbr />Cbon<wbr />Bl</a></li>
+  <li><a class="reference" href="#printCbonBlb,string"
+    title="printCbonBlb*(astring: string)"><wbr />print<wbr />Cbon<wbr />Blb</a></li>
+  <li><a class="reference" href="#printLnCbonBlb,string"
+    title="printLnCbonBlb*(astring: string)"><wbr />print<wbr />Ln<wbr />Cbon<wbr />Blb</a></li>
   <li><a class="reference" href="#rainbow,string"
     title="rainbow*(astr: string)"><wbr />rainbow</a></li>
   <li><a class="reference" href="#printRainbow,string,set[Style]"
@@ -2015,6 +2039,48 @@ printLnBlb  brightmagenta
 
 
 </dd>
+<dt id="printBbonG"><a name="printBbonG,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBbonG</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBbonG</p>
+<p>brightblack foregroundcolor on green background </p>
+
+
+</dd>
+<dt id="printLnBbonG"><a name="printLnBbonG,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBbonG</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBbonG</p>
+<p>brightblack foregroundcolor on green background with newline </p>
+
+
+</dd>
+<dt id="printBbonGb"><a name="printBbonGb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBbonGb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBbonGb</p>
+<p>brightblack foregroundcolor on brightgreen background </p>
+
+
+</dd>
+<dt id="printLnBbonGb"><a name="printLnBbonGb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBbonGb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBbonGb</p>
+<p>brightblack foregroundcolor on brightgreen background with newline </p>
+
+
+</dd>
+<dt id="printBonGb"><a name="printBonGb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBonGb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBonGb</p>
+<p>black foregroundcolor on brightgreen background </p>
+
+
+</dd>
+<dt id="printLnBonGb"><a name="printLnBonGb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBonGb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBonGb</p>
+<p>black foregroundcolor on brightgreen background with newline </p>
+
+
+</dd>
 <dt id="printBonY"><a name="printBonY,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBonY</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printBonY</p>
@@ -2059,7 +2125,7 @@ printLnBlb  brightmagenta
 </dd>
 <dt id="printWonB"><a name="printWonB,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printWonB</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printBonR</p>
+<p>printWonB</p>
 <p>white foregroundcolor on black background </p>
 
 
@@ -2067,21 +2133,63 @@ printLnBlb  brightmagenta
 <dt id="printLnWonB"><a name="printLnWonB,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnWonB</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printLnWonB</p>
-<p>white foregroundcolor on red background with newline </p>
+<p>white foregroundcolor on black background with newline </p>
 
 
 </dd>
-<dt id="printBlWonW"><a name="printBlWonW,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBlWonW</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dt id="printBlonW"><a name="printBlonW,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBlonW</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printBonR</p>
-<p>blue foregroundcolor on black background </p>
+<p>printBlonW</p>
+<p>blue foregroundcolor on white background </p>
 
 
 </dd>
 <dt id="printLnBlonW"><a name="printLnBlonW,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBlonW</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printLnWonB</p>
-<p>white foregroundcolor on red background with newline </p>
+<p>printLnBlonW</p>
+<p>blue foregroundcolor on white background with newline </p>
+
+
+</dd>
+<dt id="printConBl"><a name="printConBl,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printConBl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printConBl</p>
+<p>cyan foregroundcolor on blue background </p>
+
+
+</dd>
+<dt id="printLnConBl"><a name="printLnConBl,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnConBl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnConBl</p>
+<p>cyan foregroundcolor on blue background with newline </p>
+
+
+</dd>
+<dt id="printCbonBl"><a name="printCbonBl,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printCbonBl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printCbonBl</p>
+<p>brightcyan foregroundcolor on blue background </p>
+
+
+</dd>
+<dt id="printLnCbonBl"><a name="printLnCbonBl,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnCbonBl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnCbonBl</p>
+<p>brightcyan foregroundcolor on blue background with newline </p>
+
+
+</dd>
+<dt id="printCbonBlb"><a name="printCbonBlb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printCbonBlb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printCbonBlb</p>
+<p>brightcyan foregroundcolor on brightblue background </p>
+
+
+</dd>
+<dt id="printLnCbonBlb"><a name="printLnCbonBlb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnCbonBlb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnCbonBl</p>
+<p>brightcyan foregroundcolor on brightblue background with newline </p>
 
 
 </dd>
@@ -2498,6 +2606,9 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <dd>
 <p>loopy</p>
 <p>the lazy programmers quick for-loop display</p>
+<dl class="docutils"><dt>Todo : passing other than simple arrays,seqs or strings</dt>
+<dd>like iterators or code blocks</dd>
+</dl>
 <p>Example for loopy and loopLn</p>
 <pre class = "listing"><span class="Keyword">var</span> <span class="Identifier">z</span> <span class="Operator">=</span> <span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="DecNumber">10</span>
 <span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="Identifier">z</span><span class="Punctuation">,</span><span class="Identifier">sep</span><span class="Operator">=</span><span class="StringLit">&quot;,&quot;</span><span class="Punctuation">)</span>
@@ -2847,7 +2958,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-05 20:09:10 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-08 16:19:46 UTC</small>
       </div>
     </div>
   </div>
