--- a/private.html
+++ b/private.html
@@ -1869,17 +1869,21 @@ forward declaration
 </dd>
 <dt id="printLnBR"><a name="printLnBR,string,ForegroundColor,BackgroundColor"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">fg</span><span class="Other">:</span> <span class="Identifier">ForegroundColor</span><span class="Other">;</span> <span class="Identifier">bg</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printLnB</p>
+<p>printLnBR</p>
 <p>print a string in bright fg color and bright bg color and issue a new line</p>
-<pre class = "listing"><span class="Identifier">printLnB</span><span class="Punctuation">(</span><span class="StringLit">&quot;This is the string &quot;</span><span class="Punctuation">,</span><span class="Identifier">fgBlue</span><span class="Punctuation">,</span><span class="Identifier">bgBlack</span><span class="Punctuation">)</span></pre>
+<pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span>
+<span class="Identifier">printLnBR</span><span class="Punctuation">(</span><span class="StringLit">&quot;This is the string &quot;</span><span class="Punctuation">,</span><span class="Identifier">fgWhite</span><span class="Punctuation">,</span><span class="Identifier">bgBlack</span><span class="Punctuation">)</span>
+<span class="Identifier">printLnBB</span><span class="Punctuation">(</span><span class="StringLit">&quot;This is the string &quot;</span><span class="Punctuation">,</span><span class="Identifier">fgBlue</span><span class="Punctuation">,</span><span class="Identifier">bgYellow</span><span class="Punctuation">)</span>
+<span class="Identifier">printLnBF</span><span class="Punctuation">(</span><span class="StringLit">&quot;This is the string &quot;</span><span class="Punctuation">,</span><span class="Identifier">fgGreen</span><span class="Punctuation">,</span><span class="Identifier">bgBlack</span><span class="Punctuation">)</span>
+<span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="printBR"><a name="printBR,string,ForegroundColor,BackgroundColor"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">fg</span><span class="Other">:</span> <span class="Identifier">ForegroundColor</span> <span class="Other">=</span> <span class="Identifier">fgWhite</span><span class="Other">;</span>
              <span class="Identifier">bg</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span> <span class="Other">=</span> <span class="Identifier">bgBlack</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printB</p>
+<p>printBR</p>
 <p>print a string in bright fg color and bright bg color</p>
-<pre class = "listing"><span class="Identifier">printB</span><span class="Punctuation">(</span><span class="StringLit">&quot;This is the string &quot;</span><span class="Punctuation">,</span><span class="Identifier">fgBlue</span><span class="Punctuation">,</span><span class="Identifier">bgBlack</span><span class="Punctuation">)</span></pre>
+<pre class = "listing"><span class="Identifier">printBR</span><span class="Punctuation">(</span><span class="StringLit">&quot;This is the string &quot;</span><span class="Punctuation">,</span><span class="Identifier">fgBlue</span><span class="Punctuation">,</span><span class="Identifier">bgBlack</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="printLnBF"><a name="printLnBF,string,ForegroundColor,BackgroundColor"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBF</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">fg</span><span class="Other">:</span> <span class="Identifier">ForegroundColor</span> <span class="Other">=</span> <span class="Identifier">fgWhite</span><span class="Other">;</span>
@@ -3032,7 +3036,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-09 13:52:34 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-09 14:04:21 UTC</small>
       </div>
     </div>
   </div>
