--- a/private.html
+++ b/private.html
@@ -1854,7 +1854,7 @@ forward declaration
 </dd>
 <dt id="printLn"><a name="printLn,T,varargs[string,]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLn</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">st</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">cols</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Other">`</span><span class="Operator">$</span><span class="Other">`</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printTLn</p>
+<p>printLn</p>
 <p>displays colored tokenized strings and issues a newline when finished</p>
 <p>strings will be tokenized and colored according to colors in cols</p>
 <dl class="docutils"><dt>NOTE : this proc does not play well with Nimborg/high_level.nim</dt>
@@ -3036,7 +3036,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-09 14:04:21 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-09 14:05:40 UTC</small>
       </div>
     </div>
   </div>
