--- a/private.html
+++ b/private.html
@@ -1358,6 +1358,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printHl*(s: string; substr: string; col: string)"><wbr />print<wbr />Hl</a></li>
   <li><a class="reference" href="#printStyled,string,string,string,set[Style]"
     title="printStyled*(s: string; substr: string; col: string; astyle: set[Style])"><wbr />print<wbr />Styled</a></li>
+  <li><a class="reference" href="#printLnStyled,string,string,string,set[Style]"
+    title="printLnStyled*(s: string; substr: string; col: string; astyle: set[Style])"><wbr />print<wbr />Ln<wbr />Styled</a></li>
   <li><a class="reference" href="#printTuple,"
     title="printTuple*(xs: tuple): string"><wbr />print<wbr />Tuple</a></li>
   <li><a class="reference" href="#validdate,string"
@@ -2170,6 +2172,27 @@ printLnBlb  brightmagenta
 
 
 </dd>
+<dt id="printLnStyled"><a name="printLnStyled,string,string,string,set[Style]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnStyled</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">astyle</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnStyled</p>
+<p>extended version of writestyled and printHl to allow color and styles</p>
+<p>to print and highlight all appearances of a substring of a string and issue a new line</p>
+<p>styles may and in some cases not have the desired effect</p>
+<p>available styles :</p>
+<p>styleBright = 1,            ## bright text styleDim,                   ## dim text styleUnknown,               ## unknown styleUnderscore = 4,        ## underscored text styleBlink,                 ## blinking/bold text styleReverse = 7,           ## unknown styleHidden                 ## hidden text</p>
+<p>with a certain color</p>
+<pre class = "listing"><span class="Comment"># this highlights all T in green and underscore them</span>
+<span class="Identifier">printStyled</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleUnderScore</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
+
+<span class="Comment"># this highlights all T in rainbow colors underscore and blink them</span>
+<span class="Identifier">printStyled</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="Identifier">clrainbow</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleUnderScore</span><span class="Punctuation">,</span><span class="Identifier">styleBlink</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
+
+<span class="Comment"># this highlights all T in rainbow colors , no style is applied</span>
+<span class="Identifier">printStyled</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="Identifier">clrainbow</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span></pre><p>available colors : green,yellow,cyan,red,white,black,brightgreen,brightwhite</p>
+<blockquote><p>brightred,brightcyan,brightyellow,clrainbow</p></blockquote>
+
+
+</dd>
 <dt id="printTuple"><a name="printTuple,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printTuple</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">xs</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
 <p>printTuple</p>
@@ -2824,7 +2847,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-09 22:26:58 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-10 16:47:08 UTC</small>
       </div>
     </div>
   </div>
